--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-blur": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "iconsax-react-native": "^0.0.8",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-circular-progress": "^1.4.0",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.1.3"
   },
   "private": true
