--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
+    "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.28",
     "expo-blur": "^13.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "iconsax-react-native": "^0.0.8",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-circular-progress": "^1.4.0",
-    "react-native-svg": "15.2.0"
+    "react-native-reanimated": "^3.15.1",
+    "react-native-svg": "15.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
